add query to open manifest from object URL
